<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/com.pnikosis.materialishprogress"
    android:id="@+id/loading"
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="RSSI Setting"
        android:textSize="15sp" />
	 
	 <LinearLayout
	    android:id="@+id/rssi_linear"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
          <LinearLayout
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView 
	            android:paddingTop="5dp"
	            android:id="@+id/high_rssi_id"
	            android:layout_width="80dip"
	            android:layout_height="match_parent"
	            android:text="@string/high_rssi"/>
	         <EditText
			    android:id="@+id/high_rssi_input"
			    android:layout_width="120dip"
			    android:layout_height="wrap_content"/>
	         <TextView 
	            android:layout_marginLeft="10dp"
	            android:paddingTop="5dp"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:text="@string/show_rssi_unit"
	            android:textSize="15sp"/>
        </LinearLayout>
        
        <LinearLayout
	        android:layout_marginTop="10dp"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView 
	            android:paddingTop="5dp"
	            android:id="@+id/low_rssi_id"
	            android:layout_width="80dip"
	            android:layout_height="match_parent"
	            android:text="@string/low_rssi"/>
	         <EditText
			    android:id="@+id/low_rssi_input"
			    android:layout_width="120dip"
			    android:layout_height="wrap_content"/>
	          <TextView 
	            android:layout_marginLeft="10dp"
	            android:paddingTop="5dp"
	            android:layout_width="wrap_content"
	            android:layout_height="match_parent"
	            android:text="@string/show_rssi_unit"
	            android:textSize="15sp"/>
        </LinearLayout>
        
        
    </LinearLayout>
	
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
            
        <Button
            android:id="@+id/cancel_button"
           	style="@style/dialog_blue_button"
            android:background="@drawable/gray_button_background"
            android:layout_marginRight="10dp"
            android:text="@string/dialog_cancel" />
        <!-- style="@style/dialog_blue_button" -->

        <Button
            android:id="@+id/confirm_button"
            style="@style/dialog_blue_button"
            android:text="@string/dialog_ok" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Clear Connection Record"
            android:textSize="15sp" />    
    </LinearLayout>

    <Button
        android:id="@+id/clear_saved_data"
        style="@style/dialog_blue_button"
        android:layout_marginTop="5dp"
        android:text="Clear" />

</LinearLayout>